2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (i386_att_operand): Re-write handling of
	vector operations operand suffix.
	* testsuite/gas/i386/unary.s: Add more cases.
	* testsuite/gas/i386/unary.d: Adjust expectations.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (parse_operands): Reduce scope of
	paren_not_balanced, to match the new in_quotes. Skip over quoted
	regions of operands.
	(i386_att_operand): Remove (mis-named) parens_balanced. Respect
	double quote.
	* testsuite/gas/i386/unary.s: Add more cases.
	* testsuite/gas/i386/unary.d: Adjust expectations.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (digit_chars, is_digit_char): Delete.
	(md_begin): Fold digit and lower-case letter handling.
	(starts_memory_operand): Permit more characters.
	* testsuite/gas/i386/unary.s, testsuite/gas/i386/unary.d: New.
	* testsuite/gas/i386/i386.exp: Run new test.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (starts_memory_operand): New.
	(i386_att_operand): Use it.
	* testsuite/gas/i386/quoted.s, testsuite/gas/i386/quoted.d: New.
	* testsuite/gas/i386/i386.exp: Run new test.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (i386_att_operand): Flip checking for '*' and
	start-of-expression. Don't permit '*' when one was already seen.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (parse_operands): Don't check for matched
	square brackets.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (check_VecOperations): Remove 2nd parameter.
	(i386_att_operand): Adjust calls to check_VecOperations.
	* config/tc-i386-intel.c (i386_intel_operand): Likewise.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (i386_immediate): Don't call check_VecOperations.

2021-06-07  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (extend_to_32bit_address): New.
	(x86_cons, i386_finalize_immediate, md_apply_fix): Use it.